<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <ProgressBar
        android:id="@+id/progress_bar_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="?android:attr/progressBarStyle"
        android:visibility="visible"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <ScrollView
        android:layout_below="@id/toolbar_detail"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="414dp"
                android:layout_height="410dp"
                android:contentDescription="@string/desc"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/poster_a_star" />

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/black"
                android:fontFamily="@font/actor"
                android:padding="12dp"
                android:text="@string/title_detail_example"
                android:textColor="@color/colorTitle"
                android:textSize="27sp"
                android:textStyle="bold"
                android:paddingStart="20dp"
                android:paddingEnd="110dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_backdrop" />

            <TextView
                android:id="@+id/tv_vote_average_detail"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/star"
                android:gravity="center"
                android:text="@string/percentage_detail_example"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_title_detail" />

            <TextView
                android:textColor="@color/colorTitle"
                android:id="@+id/txt_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/advent_pro_medium"
                android:text="@string/overview"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_detail"/>


            <TextView
                android:id="@+id/tv_overview_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/antic"
                android:text="@string/description_detail_example"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_overview" />

            <android.support.v7.widget.CardView
                app:cardCornerRadius="50dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_backdrop"
                app:layout_constraintStart_toStartOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_poster_detail"
                    android:padding="5dp"
                    android:src="@drawable/poster_a_star"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</RelativeLayout>